.k8s/deployment-copy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: asd-ns
  name: asd-deployment-copy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: asd-prediction-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: asd-prediction-app
    spec:
      containers:
      - name: asd-deployment-container-copy-no-probe
        image: 700851836540.dkr.ecr.us-west-2.amazonaws.com/asd_fall_2023@sha256:e4d16bc521033e3cd44a87da79a9e7e741e57a298c8725daf2896c13cfa548ff
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
            ephemeral-storage: "30Gi"
          limits:
            memory: "128Mi"
            cpu: "500m"
            ephemeral-storage: "50Gi"
